# gridxd-saas-2026

./: .env  .gitignore  README.md  TODO.md  index.html  package-lock.json  package.json  tailwind.config.ts
backend/: Dockerfile  auth_middleware.py  main.py  pyproject.toml  requirements.txt  style_extractor.py  supabase_service.py
public/: manifest.json
src/: App.tsx  index.css
src/api/: authService.ts  stripeService.ts
src/components/: AuthModal.tsx  CookieBanner.tsx  ErrorBoundary.tsx  FeaturesSection.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  IconEditor.tsx  PricingSection.tsx  SocialProofSection.tsx  ThemeToggle.tsx  UpgradeModal.tsx  UploadSection.tsx  UserMenu.tsx
src/components/Upload/: ExtractMode.tsx  GenerateMode.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useIconGenerator.ts  useImageProcessor.ts  useProcessingHistory.ts
src/integrations/supabase/: types.ts
src/lib/: api.ts  logger.ts  schemas.ts  stripe-config.ts  svgStyle.ts  zip-utils.ts
src/pages/: CheckoutSuccess.tsx  Index.tsx
src/pages/legal/: AvisoLegal.tsx  Cookies.tsx  LegalLayout.tsx  Privacidad.tsx  Terminos.tsx
src/test/: extractIcons.test.ts  regionDetector.test.ts
src/workers/: regionDetector.worker.ts
supabase/: config.toml
supabase/.temp/: linked-project.json
supabase/functions/check-subscription/: index.ts
supabase/functions/create-checkout/: index.ts
supabase/functions/customer-portal/: index.ts
supabase/migrations/: 20260410003043_8ab54549-e857-4f70-9f28-fea62eb33965.sql  20260419_rate_limiting.sql  20260420_security_fixes.sql
(+1 files in other folders)
